# hps-plotting

./: .gitignore  README.md  plot_z0_fits.py  pyproject.toml  signal.json
data/: hit_cat_frac.txt
examples/: config.yaml  config_abcd.yaml  config_abcd_2d_scan.yaml  config_abcd_2d_scan_noz.yaml  config_abcd_ann.yaml  config_abcd_ap.yaml  config_abcd_ap_simple.yaml  config_abcd_inc.yaml  config_abcd_l1l1_miny0.yaml  config_abcd_l1l2_miny0.yaml  config_abcd_l1l2_proj.yaml  config_abcd_l2l2_miny0.yaml  config_abcd_l2l2_psum.yaml  config_abcd_l2l3_miny0.yaml  config_abcd_l3l3_miny0.yaml  config_abcd_lowpsum.yaml  config_abcd_miny0.yaml  config_abcd_simp.yaml  config_abcd_window_scan.yaml  config_abcd_window_scan_fine.yaml  config_lifetime_fit.yaml  config_mass_run_overlay.yaml  config_rad_frac.yaml  config_run_trend.yaml  config_signal_120.yaml  config_signal_eps2_scan_120.yaml  config_signal_shape.yaml  config_signal_weight_scan.yaml  config_simp_eps2_scan_120.yaml  config_smearing_shape.yaml  config_time_debug.yaml  config_track_smearing.yaml  config_track_smearing_mollers.yaml  config_truth_resolution.yaml  config_vtxz_y0cuts.yaml  config_z0_tanl.yaml  config_z0vtx_tanl.yaml
paper_scripts/: abcd_results_table.py  check_run_yields.py  make_full_lumi_table.py  make_run_table.py  plot_hit_cat_sf.py  plot_luminosity.py
rory/: classifier_adv_2021_v9_pass5_run42QualCuts_105.pt  scan_yields_array_v9_ALL.sh  write_final_yields_v9_ALL3.py
src/hpsplot/: __init__.py  (+10 more)
students/: data_prompt_yield.json  scaler_2021_v9_pass5_run42_QualCuts_150.pkl  signal_rates.py  simp_base.py
(+9 files in other folders)
